k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-demo
  labels:
    name: otel-demo
    app: otel-demo-generator
